--- a/praticas.html
+++ b/praticas.html
@@ -169,7 +169,7 @@
                   <li><a href="https://scholar.google.com/" target="_blank">Google Scholar</a></li>
                 </ul>
                </li>
-              <li>Elabore um parágrafo integrando os achados e explicando como eles contribuem para o desenvolvimento do seu projeto.</li>
+              <li>Elabore um parágrafo integrando os achados e explicando como eles justificam e contribuem para o desenvolvimento do seu projeto.</li>
             </ol>
             <p><strong>💡 Dica:</strong> Aproveite para buscar estudos que adotem metodologias semelhantes à do seu projeto (como a análise de exoma germinativo) e que disponibilizem seus dados em bancos públicos de acesso aberto.</p>
           </div>
@@ -314,7 +314,7 @@
             Atividade 9 — Anotação das Variantes
           </button>
         </h2>
-        <div id="collapseAtividade7" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
+        <div id="collapseAtividade9" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar a anotação funcional das variantes.</p>
           </div>
@@ -330,7 +330,7 @@
             Atividade 10 — Análises
           </button>
         </h2>
-        <div id="collapseAtividade7" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
+        <div id="collapseAtividade10" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar a anotação funcional das variantes.</p>
           </div>
@@ -356,6 +356,7 @@
   </script>
 </body>
 </html>
+
 
 
 
