--- a/praticas.html
+++ b/praticas.html
@@ -207,7 +207,7 @@
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
               <pre><code>CAMINHO/PARA/O/EXECUTÁVELfastq-dump --splites-files --progress --outdir CAMINHO/DE/SAIDA/DOS/ARQUIVOS/GERADOS</code></pre>
-              <p><strong>💡</strong> Caso suas amostras sejam single-end não usar o parâmetro "--splites-files"</p>
+              <p>#Caso suas amostras sejam single-end não use o parâmetro "--splites-files"</p>
             </div>
 
             <script>
@@ -356,6 +356,7 @@
   </script>
 </body>
 </html>
+
 
 
 
