--- a/praticas.html
+++ b/praticas.html
@@ -188,7 +188,8 @@
         <div id="collapseAtividade3" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Baixar os dados necessários para o projeto.</p>
-            <p><strong>Tarefa:</strong> Com base nos dados encontrados durante a busca literária, acesse o banco onde os mesmos foram disponibilizados, encontre o código <strong>SRA</strong> e execute o seguinte comando para baixar:</p>
+            <p><strong>Tarefa:</strong> </p>
+            <p><strong>1 - </strong>Com base nos dados encontrados durante a busca literária, acesse o banco onde os mesmos foram disponibilizados, encontre o código <strong>SRA</strong> e execute o seguinte comando para baixar:</p>
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
               <pre><code>CAMINHO/PARA/O/EXECUTÁVEL/prefetch SRRXXXXXX SRRYYYYYY SRRZZZZZZ</code></pre>
@@ -203,7 +204,7 @@
                 });
               }
             </script><br><br>
-            <p><strong>Tarefa:</strong> Após baixar os dados .SRA, é necessário transformá-los para o formato <strong>FASTQ</strong>. Para isso, use o seguinte comando (para dados paired-end):</p>
+            <p><strong>2 -</strong> Após baixar os dados .SRA, é necessário transformá-los para o formato <strong>FASTQ</strong>. Para isso, use o seguinte comando (para dados paired-end):</p>
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
               <pre><code>CAMINHO/PARA/O/EXECUTÁVELfastq-dump --splites-files --progress --outdir CAMINHO/DE/SAIDA/DOS/ARQUIVOS/GERADOS</code></pre>
@@ -356,6 +357,7 @@
   </script>
 </body>
 </html>
+
 
 
 
