--- a/praticas.html
+++ b/praticas.html
@@ -207,7 +207,7 @@
             <p><strong>2 -</strong> Após baixar os dados .SRA, é necessário transformá-los para o formato <strong>FASTQ</strong>. Para isso, use o seguinte comando (para dados paired-end):</p>
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
-              <pre><code>CAMINHO/PARA/O/EXECUTÁVELfastq-dump --splites-files --progress --outdir CAMINHO/DE/SAIDA/DOS/ARQUIVOS/GERADOS</code></pre>
+              <pre><code>CAMINHO/PARA/O/EXECUTÁVEL/fastq-dump --splites-files --progress --outdir CAMINHO/DE/SAIDA/DOS/ARQUIVOS/GERADOS</code></pre>
               <p>#Caso suas amostras sejam single-end não use o parâmetro "--splites-files"</p>
             </div>
 
@@ -357,6 +357,7 @@
   </script>
 </body>
 </html>
+
 
 
 
