--- a/praticas.html
+++ b/praticas.html
@@ -253,12 +253,12 @@
                 });
               }
             </script><br><br>
-            <p><strong>2 -</strong> Após realizar o controle de qualodade com a ferramenta FastQC, utilizaremos a ferramenta MultiQC para integrar os rsultados de todas as amostras em somente um gráfico. Para isso, execute o seguinte comando:</p>
+            <p><strong>2 -</strong> Após realizar o controle de qualidade com a ferramenta FastQC, utilizaremos a ferramenta MultiQC para integrar os resultados de todas as amostras em somente um gráfico. Para isso, execute o seguinte comando:</p>
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
               <pre><code>multiqc .</code></pre>
-              <p>#Vá para o diretório que contém os arquivos que você deseja analisar com o MultiQC.</p>
-              <p>#A entrada será os arquivos gerados pelo FastQC ".fastq.gz"</p>
+              <p>#Vá para o diretório que contém os arquivos que você deseja analisar com o MultiQC.<br>
+              #A entrada será os arquivos gerados pelo FastQC ".fastq.gz"</p>
             </div>
 
             <script>
@@ -269,7 +269,9 @@
                   setTimeout(() => button.innerText = '📋', 1500);
                 });
               }
-            </script>
+            </script><br><br>
+            <p><strong>3 -</strong> Analise os resultados obtidos, com auxilio do material teórico na aba "Desenvolvimento", módulo "4 - Controle de Qualidade"</p>
+
           </div>
         </div>
       </div>
@@ -389,6 +391,7 @@
   </script>
 </body>
 </html>
+
 
 
 
