--- a/praticas.html
+++ b/praticas.html
@@ -258,7 +258,7 @@
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
               <pre><code>multiqc .</code></pre>
               <p>#Vá para o diretório que contém os arquivos que você deseja analisar com o MultiQC.<br>
-              #A entrada será os arquivos gerados pelo FastQC ".fastq.gz"</p>
+              #A entrada serão os arquivos gerados pelo FastQC ".fastq.gz"</p>
             </div>
 
             <script>
@@ -425,3 +425,4 @@
   </script>
 </body>
 </html>
+
