--- a/praticas.html
+++ b/praticas.html
@@ -270,7 +270,7 @@
                 });
               }
             </script><br><br>
-            <p><strong>3 -</strong> Analise os resultados obtidos, com auxilio do material teórico na aba "Desenvolvimento", módulo "4 - Controle de Qualidade"</p>
+            <p><strong>3 -</strong> Analise os resultados obtidos, com auxilio do material teórico na aba "Desenvolvimento", módulo "4 - Controle de Qualidade".</p>
 
           </div>
         </div>
@@ -425,4 +425,5 @@
   </script>
 </body>
 </html>
+
 
