--- a/praticas.html
+++ b/praticas.html
@@ -311,7 +311,8 @@
                   setTimeout(() => button.innerText = '📋', 1500);
                 });
               }
-            </script>
+            </script><br><br>
+            <p><strong>2 -</strong> Caso suas amostras tenham sido trimadas, repita a atividade 4. O objetivo é garantir que a qualidade dos dados é adequada para dar continuidade à análise.</p>
           </div>
         </div>
       </div>
@@ -415,6 +416,7 @@
   </script>
 </body>
 </html>
+
 
 
 
