--- a/praticas.html
+++ b/praticas.html
@@ -295,12 +295,12 @@
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
               <pre><code>CAMINHO/PARA/O/EXECUTÁVEL/trim_galore -j 24 -q 10 --phred33 --length 35 --paired --retain_unpaired -o CAMINHO/PARA/OS/OUTPUTS</code></pre>
               <p>#Significado Parâmetros:</p>
-              <li>#-j: Define o número de núcleos (cores) de CPU a serem usados.</li>
-              <li>#-q: Define o limiar mínimo de qualidade Phred. No caso, bases no final de uma leitura com qualidade inferior a 10 serão removidas.</li>
-              <li>#--phred: Especifica o formato de codificação da qualidade das bases.</li>
-              <li>#--length: Define o comprimento mínimo que uma leitura deve ter após a trimagem para ser mantida.</li>
-              <li>#--paired: Informa ao programa que os dados de entrada são paired-end.</li>
-              <li>#--retain_unpaired: Mantém leituras cujo par foi descartado em arquivos separados.</li>
+              <p>#-j: Define o número de núcleos (cores) de CPU a serem usados.</p>
+              <p>#-q: Define o limiar mínimo de qualidade Phred. No caso, bases no final de uma leitura com qualidade inferior a 10 serão removidas.</p>
+              <p>#--phred: Especifica o formato de codificação da qualidade das bases.</p>
+              <p>#--length: Define o comprimento mínimo que uma leitura deve ter após a trimagem para ser mantida.</p>
+              <p>#--paired: Informa ao programa que os dados de entrada são paired-end.</p>
+              <p>#--retain_unpaired: Mantém leituras cujo par foi descartado em arquivos separados.</p>
             </div>
 
             <script>
@@ -416,6 +416,7 @@
   </script>
 </body>
 </html>
+
 
 
 
